# apiserver/openapi.yaml
@@ -115,6 +115,8 @@ paths:
         409:
           description: Evento repetido ou outro erro de integridade
           content: {}
+      security:
+      - jwt: ['secret']
   /acessopessoa/{IDEvento}:
     get:
       operationId: api.get_acessopessoa
@@ -141,6 +143,8 @@ paths:
         default:
           description: Erro inesperado
           content: {}
+      security:
+      - jwt: ['secret']
   /credenciamentopessoa:
     post:
       operationId: api.credenciamentopessoa
